--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -16,8 +16,8 @@ nav{
     color: #FD6E0A;
 }
 
-.color{
-
+.dark-2{
+    color: #474747
 }
 
 .title{
@@ -27,8 +27,12 @@ nav{
 
 nav li {
     list-style: none;
+    margin-right: 51px;
 }
 nav li a{
     text-decoration: none;
     font-size: 20px;
+}
+nav ul {
+    display: flex;
 }
