--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -10,6 +10,9 @@
 
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 30px 200px;
 }
 /* shared style */
 .textprimari{
@@ -35,4 +38,13 @@ nav li a{
 }
 nav ul {
     display: flex;
+}
+
+.btn-primary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    padding: 18px 35px;
+    border-radius: 5px;
 }
