--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,7 +5,12 @@
     font-variation-settings:
       "wdth" 100;
   }
-
+/* header */
+.header{
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
 /* nav style */
 
 nav{
@@ -48,4 +53,31 @@ nav ul {
     color: white;
     padding: 18px 35px;
     border-radius: 5px;
+    border: none;
+}
+/* banner style */
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 37px 0 200px;
+}
+.banner-content{
+    max-width: 580px
+    ;
+}
+.banner-greeting{
+    font-size: 45px;
+    font-weight: 600;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: bold;
+}
+.description{
+    font-weight: 300;
+    font-size: 18px;
+}
+.banner-pic{
+    width: 580px;
 }
