--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,6 +5,26 @@
     font-variation-settings:
       "wdth" 100;
   }
+  .btn-primary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: none;
+  }
+  .section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+  } 
+
+  .section-description{
+    font-size: 18px;
+    font-weight: normal;
+    color: #757575;
+  }
 
 /* header */
 .header{
@@ -22,6 +42,9 @@ nav{
     margin: 30px 200px;
 }
 /* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .textprimari{
     color: #FD6E0A;
 }
@@ -57,8 +80,7 @@ nav ul {
     margin: 0 37px 0 200px;
 }
 .banner-content{
-    max-width: 580px
-    ;
+    max-width: 580px;
 }
 .banner-greeting{
     font-size: 45px;
@@ -98,4 +120,20 @@ nav ul {
     font-size: 18px;
     font-weight: normal;
     color: #757575;
+  }
+
+  /* main style */
+ .main{
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+
+
+  /* about style */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin: 130px;
   }
