--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -127,7 +127,9 @@ nav ul {
     max-width: 1140px;
     margin: 0 auto;
   }
-
+  main section{
+    margin: 130px;
+  }
 
   /* about style */
 
@@ -135,7 +137,7 @@ nav ul {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin: 130px;
+    
   }
 .about-items{
     display: flex;
@@ -143,5 +145,14 @@ nav ul {
 }
 .item-description{
     font-weight: 600;
-    /* justify-content: space-around; */
+}
+/* skills section style */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skills{
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
