--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -156,3 +156,24 @@ nav ul {
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+
+/* resume section style */
+.resume-container{
+    display: flex;
+    gap: 28px;
+}
+
+.experience-description, .experience-sub-title{
+    color: #757575;
+    /* font-size: 20px; */
+    /* font-weight: 600; */
+    margin-bottom: 20px;
+}
+ .resume-column-title, .experience-title{
+    color: #474747;
+ }
+
+.section-title{
+    color: #181818;
+    text-align: center;
+}
