--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -184,6 +184,8 @@ nav ul {
 }
 /* footer style */
 
-.footer-subtitle{
+.footer-title{
     display: flex;
+    gap: 100px;
+    padding: 130px 230px;
 }
