--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -189,3 +189,17 @@ nav ul {
     gap: 100px;
     padding: 130px 230px;
 }
+.footer-peragraph{
+    margin-top: 50px;
+}
+
+footer input[type="text"]{
+    height: 50px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    display: block;
+    width: 100%;
+    margin-bottom: 24px;
+    border: none;
+}
