--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -193,7 +193,7 @@ nav ul {
     margin-top: 50px;
 }
 
-footer input[type="text"]{
+footer input[type="text"], footer input[type="email"], footer textarea{
     height: 50px;
     padding: 10px 20px;
     border-radius: 5px;
