--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -237,4 +237,7 @@ footer textarea{
         padding: 0;
         margin: 0;
     }
+    .resume-container{
+        flex-direction: column;
+    }
 }
