--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -260,7 +260,10 @@ footer textarea{
     nav > ul{
         gap: 20px;
     }
-    
+    .btn-primary{
+        margin-bottom: 20px;
+    }
+
     footer input[type="text"],footer input[type="email"], footer textarea{
         width: calc(100% - 40px);
     } 
